--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -10,5 +10,6 @@
         <item>@font/nunito_light</item>
         <item>@font/nunito_sans</item>
         <item>@font/nunito_sans_light</item>
+        <item>@font/nunito_semibold</item>
     </array>
 </resources>
