--- a/app/src/main/res/drawable/rectangle_list_item_bar.xml
+++ b/app/src/main/res/drawable/rectangle_list_item_bar.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape
     xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
-    <solid android:color="#2FAC6C01"/>
+    <solid android:color="#D6B783"/>
+    <size android:height="60dp"/>
     <corners android:bottomRightRadius="20dp" android:bottomLeftRadius="20dp" />
 </shape>
