--- a/app/src/main/res/layout/list_item_recipe.xml
+++ b/app/src/main/res/layout/list_item_recipe.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:layout_marginHorizontal="8dp"
     android:layout_marginVertical="6dp"
     app:cardCornerRadius="20dp">
@@ -17,7 +17,7 @@
         <ImageView
             android:id="@+id/imageRecipe"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="0dp"
             android:contentDescription="@string/image_item_list"
             app:layout_constraintBottom_toTopOf="@+id/imageView"
             app:layout_constraintDimensionRatio="1:0.5"
@@ -32,7 +32,8 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:srcCompat="@drawable/rectangle_list_item_bar" />
+            app:srcCompat="@drawable/rectangle_list_item_bar"
+            android:contentDescription="@string/bar_list_item" />
 
         <TextView
             android:id="@+id/titleRecipeTextView"
@@ -64,15 +65,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="3dp"
-            android:layout_marginTop="9dp"
+            android:layout_marginTop="10dp"
             android:layout_marginBottom="14dp"
             android:fontFamily="@font/nunito_semibold"
             android:text="@string/total_time_cooking"
-            android:textSize="7sp"
+            android:textSize="10sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toEndOf="@+id/timer"
             app:layout_constraintTop_toBottomOf="@+id/titleRecipeTextView" />
-
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
