--- a/app/src/main/res/layout/list_recipes_fragment.xml
+++ b/app/src/main/res/layout/list_recipes_fragment.xml
@@ -1,7 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.recyclerview.widget.RecyclerView
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/recipeGrid"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingHorizontal="18dp"/>
+    android:layout_height="match_parent">
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recipeGrid"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:paddingHorizontal="18dp" />
+
+
+</androidx.constraintlayout.widget.ConstraintLayout>
+
