--- a/app/src/main/res/layout/list_item_recipe.xml
+++ b/app/src/main/res/layout/list_item_recipe.xml
@@ -20,7 +20,7 @@
             android:layout_height="0dp"
             android:contentDescription="@string/image_item_list"
             app:layout_constraintBottom_toTopOf="@+id/imageView"
-            app:layout_constraintDimensionRatio="1:0.5"
+            app:layout_constraintDimensionRatio="1:0.7"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -29,20 +29,20 @@
             android:id="@+id/imageView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:contentDescription="@string/bar_list_item"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:srcCompat="@drawable/rectangle_list_item_bar"
-            android:contentDescription="@string/bar_list_item" />
+            app:srcCompat="@drawable/rectangle_list_item_bar" />
 
         <TextView
             android:id="@+id/titleRecipeTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:singleLine="true"
             android:layout_marginStart="12dp"
-            android:layout_marginBottom="32dp"
+            android:layout_marginBottom="27dp"
             android:fontFamily="@font/nunito_semibold"
+            android:singleLine="true"
             android:text="@string/title_dishes"
             android:textColor="@color/black"
             android:textSize="11sp"
@@ -54,10 +54,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="12dp"
+            android:layout_marginTop="10dp"
             android:layout_marginBottom="12dp"
             android:contentDescription="@string/image_timer"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/titleRecipeTextView"
             app:srcCompat="@drawable/ic_timer" />
 
         <TextView
@@ -69,6 +71,7 @@
             android:layout_marginBottom="14dp"
             android:fontFamily="@font/nunito_semibold"
             android:text="@string/total_time_cooking"
+            android:textColor="#5D4037"
             android:textSize="10sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toEndOf="@+id/timer"
