--- a/app/src/main/res/layout/list_recipes_fragment.xml
+++ b/app/src/main/res/layout/list_recipes_fragment.xml
@@ -2,13 +2,14 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@drawable/recipes_list_background">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recipeGrid"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:paddingHorizontal="18dp" />
+        android:paddingHorizontal="12dp" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
