--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -2,6 +2,8 @@
 <resources>
     <array name="preloaded_fonts" translatable="false">
         <item>@font/martel_bold</item>
+        <item>@font/nunito_bold</item>
+        <item>@font/nunito_extrabold</item>
         <item>@font/nunito_light</item>
         <item>@font/nunito_semibold</item>
     </array>
