--- a/app/src/main/res/layout/recipe_details_fragment.xml
+++ b/app/src/main/res/layout/recipe_details_fragment.xml
@@ -103,7 +103,7 @@
 
                 <com.google.android.material.chip.ChipGroup
                     android:id="@+id/ingredientsList"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:theme="@style/Theme.MaterialComponents.Light">
 
