--- a/app/src/main/res/layout/recipe_details_fragment.xml
+++ b/app/src/main/res/layout/recipe_details_fragment.xml
@@ -37,7 +37,7 @@
 
             <TextView
                 android:id="@+id/cookingTimeTextView"
-                android:layout_width="145dp"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
                 android:layout_marginEnd="42dp"
@@ -47,7 +47,7 @@
                 android:textColor="#000000"
                 android:textSize="16sp"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/recipeTitleTextView" />
+                app:layout_constraintTop_toBottomOf="@+id/caloriesTextView" />
 
             <TextView
                 android:id="@+id/sourceTextView"
@@ -117,13 +117,24 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="42dp"
                 android:layout_marginTop="16dp"
-                android:layout_marginEnd="42dp"
+                android:layout_marginEnd="4dp"
                 android:fontFamily="@font/nunito_semibold"
                 android:text="@string/title_dishes"
                 android:textColor="#E9000000"
                 android:textSize="24sp"
-                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/addToFavorites"
                 app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <CheckBox
+                android:id="@+id/addToFavorites"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:layout_marginTop="12dp"
+                android:layout_marginEnd="30dp"
+                android:button="@drawable/favorites_checkbox_selector"
+                android:buttonTint="#CF1111"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
