--- a/app/src/main/res/layout/recipe_details_fragment_favorites.xml
+++ b/app/src/main/res/layout/recipe_details_fragment_favorites.xml
@@ -134,6 +134,7 @@
                 android:layout_marginEnd="30dp"
                 android:button="@drawable/favorites_checkbox_selector"
                 android:buttonTint="#CF1111"
+                android:checked="true"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
